src/Services/tourServices/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tour-erp
  labels:
    app.kubernetes.io/part-of: tour-erp
